--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+<header th:replace="layout/layout :: header"></header>
     <div class="container">
        
         <nav class="navbar navbar-expand-lg navbar-expand-sm-6  navbar-light bg-white">
