arreglo_css_login
arreglo css login

--- a/src/main/resources/templates/scss/estilos.scss
+++ b/src/main/resources/templates/scss/estilos.scss
@@ -1,13 +1,10 @@
 
 //patron de colores###########################
-$principal: #F62DA8;
+$principal: #24262B ;
 
 
 //variables de bootstrap#########################
 $primary: $principal;
-$enable-rounded: false;
-
-
 
 
 @import "../lib/bootstrap/scss/bootstrap";
