--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
-    <link href="css/estilos.css" rel="stylesheet"> 
-        
+
+    <link href="css/estilos.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
     <title>Hello, world!</title>
 </head>
 
 <body>
 
-    <div class="container">
+    <div class="container">|
        
         <nav class="navbar navbar-expand-lg navbar-expand-sm-6  navbar-light bg-white">
             <div class="container-fluid">
@@ -43,7 +43,7 @@
     </div>
 
    <div class="container">
-       <div class="col">
+       <div class="row">
         <div class="card col-12 col-sm-12 col-md-4">
             <div class="card-body">
               <h5 class="card-title">Card 1</h5>
