--- a/src/main/resources/templates/producto.html
+++ b/src/main/resources/templates/producto.html
@@ -17,19 +17,27 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
    
        	<table class="table table-striped">
 					<thead class="bg-dark text-white text-center">
+						
+						
 						<tr>
 							<td>Producto</td>
+							<td>precio</td>
+							<td>descripcion 1</td>
+							<td>2</td>
+							<td>3</td>							
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<td>
 							<td style="background-color:white" th:text="${productos.productTitle}"></td>
+							<td style="background-color:white" th:text="${productos.price}"></td>
+							<td style="background-color:white" th:each="feature: ${productos.features}" th:text="${feature}"></td>
+							
 							</tr>
 					</tbody>
 				</table>
 
-        
+   <img th:each="image: ${productos.imageUrlList}" th:src="@{${image}}" width="400" height="341"></img>     
 
              
       
