--- a/src/main/resources/templates/configuracion.html
+++ b/src/main/resources/templates/configuracion.html
@@ -10,28 +10,26 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
     <!-- Bootstrap CSS -->
     <link href="css/estilos.css" rel="stylesheet"> 
       <link href="css/index.css" rel="stylesheet"> 
-    <title>Hello, world!</title>
+    <title>Configuraciones</title>
 </head>
 
 <body>
    
        	<table class="table table-striped">
-					<thead class="bg-dark text-white text-center">
-						
-						
+					<thead class="bg-dark text-white text-center">				
 						<tr>
-							<td>Producto</td>
-							<td>precio</td>
-							<td>descripcion 1</td>
-							<td>2</td>
-							<td>3</td>							
+							<td>porcentaje adanual</td>
+							<td>Costo Envio desde Usa</td>					
+							<td>Costo Envio Local</td>
+							<td>Porcentaje Ganancia</td>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<td style="background-color:white" th:text="${configuracion.Porcentaje_Adanual}"></td>
+							<td style="background-color:white" th:text="${configuracion.Porcentaje_adanual}"></td>
 							<td style="background-color:white" th:text="${configuracion.Costo_USA_GT}"></td>
-					
+							<td style="background-color:white" th:text="${configuracion.Costo_Envio_local}"></td>
+							<td style="background-color:white" th:text="${configuracion.Porcentaje_Ganancia}"></td>
 							
 							</tr>
 					</tbody>
