commit administracion gastos
update gastos en bd y otros

--- a/src/main/resources/templates/configuracion.html
+++ b/src/main/resources/templates/configuracion.html
@@ -32,10 +32,14 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 							<td style="background-color:white" th:text="${configuracion.Porcentaje_Ganancia}"></td>
 							
 							</tr>
+							
+
 					</tbody>
 				</table>
 
- 
+             <a class="btn btn-outline-primary col-xs-12" th:href="@{/editar-configuracion/1}"
+              >EDITAR</a
+            >
 
              
       
