--- a/src/main/resources/templates/producto.html
+++ b/src/main/resources/templates/producto.html
@@ -30,7 +30,7 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 					<tbody>
 						<tr>
 							<td style="background-color:white" th:text="${productos.productTitle}"></td>
-							<td style="background-color:white" th:text="${productos.price}"></td>
+							<td style="background-color:white" th:text="${precio}"></td>
 							<td style="background-color:white" th:each="feature: ${productos.features}" th:text="${feature}"></td>
 							
 							</tr>
