--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,19 +25,15 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item col-xs-6">
-          <a class="nav-link" href="/producto.html">Productos</a>
+          <a class="nav-link" href="">Productos</a>
         </li>
         <li class="nav-item col-xs-6">
           <a class="nav-link" href="#">Servicios</a>
         </li>
         <li class="nav-item col-xs-6">
-          <a
-            class="nav-link disabled"
-            href="#"
-            tabindex="-1"
-            aria-disabled="true"
-            >Admin</a
-          >
+          <li class="nav-item col-xs-6">
+            <a class="nav-link" href="">Admin</a>
+          </li>
         </li>
 
         <!--en esta parte esta el boton iniciar y cerrar session -->
