--- a/src/main/resources/templates/producto.html
+++ b/src/main/resources/templates/producto.html
@@ -1,80 +1,144 @@
-<!doctype html>
-<html xmlns:th="http://www.thymeleaf.org"
-xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+<!DOCTYPE html>
+<html
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 >
-
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Bootstrap CSS -->
-    <link href="css/estilos.css" rel="stylesheet"> 
-      <link href="css/Producto.css" rel="stylesheet"> 
+    <link href="css/estilos.css" rel="stylesheet" />
+    <link href="css/index.css" rel="stylesheet" />
     <title>Producto</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <div class="container">
+      <div class="banner-area">
+        <ul class="nav justify-content-center">
+          <li class="nav-item col-xs-6">
+            <a class="nav-link active" aria-current="page" href="/login">Home</a>
+          </li>
+          <li class="nav-item col-xs-6">
+            <a class="nav-link" href="#">Servicios</a>
+          </li>
+          <li class="nav-item col-xs-6">
+          
+          </li>
 
-	<div
-	class="card col-12 col-sm-12 col-md-4 text-white bg-dark"
-	style="width: 20rem; padding: 2%">
+          <!--en esta parte esta el boton iniciar y cerrar session -->
 
+          <ul class="navbar-nav navbar-right">
+            <li sec:authorize="!isAuthenticated()">
+              <a class="btn btn-outline-primary col-xs-12" th:href="@{/login}"
+                >Iniciar Sesion</a
+              >
+            </li>
 
-	<div class="card-body">
-	  <h5 class="card-title" th:text="${feature}"></h5>
-	  <p class="card-text" th:text="${productos.price}">
-	  </p>
-	  <a href="#" class="btn btn-primary">Comprar</a>
-	</div>
-	<img
-	th:each="image: ${productos.imageUrlList}" th:src="@{${image}}" width="150" height="150"
-	  class="card-img-top"
-	  alt="..."
-	/>
+            <li sec:authorize="isAuthenticated()" class="dropdown show">
+              <a
+                class="btn btn-outline-primary dropdown-toggle"
+                href="#"
+                role="button"
+                id="dropdownMenuLink"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+                ><span sec:authentication="name"></span
+              ></a>
+              <!-- termina el boton iniciar y cerrar session -->
+            </li>
+          </ul>
 
-	<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-		<div class="carousel-inner">
-		  <div class="carousel-item active">
-			<img src="" class="d-block w-100" alt="...">
+          <div>
+            <!--AQUI VA LA FORMA EN QUE SE DESPLIEGA EL BOTON DE CERRAR SESION PUEDE SER EN CASCADA O ALGO ASI -->
+            <form id="logoutForm" th:action="@{/logout}" method="post">
+              <button
+                class="dropdown-item"
+                onclick="document.getElementById('logoutForm').submit();"
+                type="submit"
+              >
+                Cerrar Sesion
+              </button>
+              <input
+                type="hidden"
+                th:name="${_csrf.parameterName}"
+                th:value="${_csrf.token}"
+              />
+            </form>
+          </div>
+        </ul>
+      </div>
+      >
+    </div>
+
+	<div class="row">
+	
+		<div
+		  class="card col-12 col-sm-12 col-md-4 bg-dark"
+		  style="width: 40rem; padding: 3%"
+		>
+		
+		<div
+			  id="carouselExampleSlidesOnly"
+			  class="carousel slide"
+			  data-bs-ride="carousel" style="margin-top: -20;">
+			  <div class="carousel-inner">
+				<div class="carousel-item active">
+				  <img
+					th:src="@{${productos.imageUrlList[0]}}"
+					width="200"
+					height="300"
+					class="d-block w-100"
+					alt="..."
+				  />
+				</div>
+				<div class="carousel-item">
+				  <img
+					th:src="@{${productos.imageUrlList[1]}}"
+					width="200"
+					height="300"
+					class="d-block w-100"
+					alt="..."
+				  />
+				</div>
+				<div class="carousel-item">
+				  <img
+					th:src="@{${productos.imageUrlList[0]}}"
+					width="200"
+					height="300"
+					class="d-block w-100"
+					alt="..."
+				  />
+				</div>
+			  </div>
+			</div>
+
+		  <div class="card-body text-white ">
+			<h5 class="card-title" th:text="${productos.productTitle}" style="font-size: x-small"></h5>
+			<h4 style="text-align: center; margin-top: 10px;">Detalle Cotizacion</h4>
+			<h2 class="card-text" th:text="${productos.price}" style="color: #f62da8; text-align: left;"></h2>
+			
+			<a href="#" class="btn btn-primary">Comprar</a>
+	
 		  </div>
-		  <div class="carousel-item">
-			<img src="" class="d-block w-100" alt="...">
-		  </div>
-		  <div class="carousel-item">
-			<img src="..." class="d-block w-100" alt="...">
+		</div>
+  
+		<div
+		  class="card col-12 col-sm-12 col-md-4 text-white bg-dark"
+		  style="width: 30rem; padding: 2%"
+		>
+		 
+		  <div class="card-body">
+			<h5 class="card-title">Description</h5>
+			<td th:each="feature: ${productos.features}" th:text="${feature}" style="text-align: justify; color:#f62da8"></td>
 		  </div>
 		</div>
 	  </div>
 
-
-
-  </div>
-
-       	<table class="table table-striped">
-					<thead class="bg-dark text-white text-center">	
-						<tr>
-							<td>Producto</td>
-							<td>precio</td>
-							<td>descripcion 1</td>
-							<td>2</td>
-							<td>3</td>							
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td style="background-color:white" th:text="${productos.productTitle}"></td>
-							<td style="background-color:white" th:text="${productos.price}"></td>
-							<td style="background-color:white" th:each="feature: ${productos.features}" th:text="${feature}"></td>
-							
-							</tr>
-					</tbody>
-				</table>
-
-   <img th:each="image: ${productos.imageUrlList}" th:src="@{${image}}" width="200" height="150"></img>     
-
-             
+    <!-- <img th:each="image: ${productos.imageUrlList}" th:src="@{${image}}" width="200" height="150" ></img>   -->
 
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
-</body>
-
+  </body>
 </html>
