--- a/src/main/resources/templates/configuracion.html
+++ b/src/main/resources/templates/configuracion.html
@@ -37,7 +37,7 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 					</tbody>
 				</table>
 
-             <a class="btn btn-outline-primary col-xs-12" th:href="@{/editar-configuracion/1}"
+             <a class="btn btn-outline-primary col-xs-12" th:href="@{/editarconfiguracion/1}"
               >EDITAR</a
             >
 
