--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
         </li>
         <li class="nav-item col-xs-6">
           <li class="nav-item col-xs-6">
-            <a class="nav-link" href="">Admin</a>
+            <a class="nav-link" th:href="@{/configuracion}">Admin</a>
           </li>
         </li>
 
@@ -107,7 +107,7 @@
             Multiprocesadores NVIDIA Ampere Streaming: los bloques de construcción para la GPU más rápida
             y eficiente del mundo, el nuevo Ampere SM aporta 2 veces el rendimiento FP32 y una mejor eficiencia energética.
           </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Cotizar</a>
         </div>
       </div>
 
@@ -121,12 +121,11 @@
           alt="..."
         />
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Corsair Vengeance LPX 16GB (2x8GB) DDR4 DRAM 3200MHz</h5>
           <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
+            Vengeance LPX memoria es diseñado para overclocking de alto rendimiento de de calor
           </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Cotizar</a>
         </div>
       </div>
 
@@ -140,12 +139,11 @@
           alt="..."
         />
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">REDRAGON S101 Set combo</h5>
           <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
+            104 teclas estándar, 19 teclas sin conflictos, 12 teclas multimedia, a prueba de salpicaduras, intercambiables "letras" teclas y teclas "Flecha, llaves, Win se puede desactivar para gaming.
           </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Cotizar</a>
         </div>
       </div>
     </div>
